compiler/test/snapshot/infer-expr/error-when-updating-structs.exp
Error when updating structs.

SOURCE:
{
  struct Foo { a: Int }

  let x = Foo { a: 1 };
  x.a = "foo"
}

OUTPUT:
Can't update struct fields, re-assign instead. x =Foo { field = new_value, ..x } 

5|    x.a = "foo"
      ^^^^^^^^^^^